<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/login_scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

        <LinearLayout
            android:id="@+id/social_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@+id/my_toolbar">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/gplus_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </com.google.android.gms.common.SignInButton>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/social_login_layout"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp" >

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email_input_placeholder"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/password_input_placeholder"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/native_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_logo"
                android:onClick="signIn"
                android:text="@string/signin_button" />

            <Button
                android:id="@+id/not_registered_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchSignUpActivity"
                android:paddingTop="10dp"
                android:text="@string/not_registered_text"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>